--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     
     repositories {
         google()
-        //jcenter()
+        jcenter()
         maven { url "http://jcenter.bintray.com"}
     }
     dependencies {
