--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:common-java8:1.1.1"
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
