--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
     implementation 'com.google.android.gms:play-services-auth:12.0.1'
+    implementation 'com.android.support:cardview-v7:27.1.0'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
 
@@ -44,6 +45,8 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
+    implementation 'com.borax12.materialdaterangepicker:library:1.9'
+    implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
 
