--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name=".MedicationActivity"
             android:label="@string/title_activity_medication"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:theme="@style/MedManagerAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
