--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,17 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
+    }
+    lintOptions {
+        abortOnError false
     }
 }
 
@@ -45,9 +52,37 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.leavjenn.smoothdaterangepicker:library:0.2.0'
-    //implementation 'com.borax12.materialdaterangepicker:library:1.9'
     implementation 'io.github.luizgrp.sectionedrecyclerviewadapter:sectionedrecyclerviewadapter:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //test frameworks
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    testImplementation 'junit:junit:4.12'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
+    def appModuleRootFolder = '.'
+    def srcDir = 'src'
+    def googleServicesJson = 'google-services.json'
+
+    task switchToDebug(type: Copy) {
+        def buildType = 'debug'
+        description = 'Switches to DEBUG google-services.json'
+        from "${srcDir}/${buildType}"
+        include "$googleServicesJson"
+        into "$appModuleRootFolder"
+    }
+
+    task switchToRelease(type: Copy) {
+        def buildType = 'release'
+        description = 'Switches to RELEASE google-services.json'
+        from "${srcDir}/${buildType}/"
+        include "$googleServicesJson"
+        into "$appModuleRootFolder"
+    }
+
+    afterEvaluate {
+        processDebugGoogleServices.dependsOn switchToDebug
+        //processReleaseGoogleServices.dependsOn switchToRelease
+    }
