--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,25 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
-    
+
+    environment:
+        CC_TEST_REPORTER_ID: 72207016b2b04ecb70107bd699ee560da73476441084a2e59e41e03194c5f39c
+
+
     steps:
       - checkout
+
+    # Code Climate
+    dependencies:
+      post:
+        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        - chmod +x ./cc-test-reporter
+
+    test:
+      pre:
+        - ./cc-test-reporter before-build
+
+
 
       # Download and cache dependencies
       - restore_cache:
@@ -53,6 +69,7 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
-
+      post:
+          - ./cc-test-reporter after-build --exit-code $EXIT_CODE
 
 
