--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,8 @@ jobs:
       # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
       TERM: dumb
+      CC_TEST_REPORTER_ID: 72207016b2b04ecb70107bd699ee560da73476441084a2e59e41e03194c5f39c
 
-    environment:
-        CC_TEST_REPORTER_ID: 72207016b2b04ecb70107bd699ee560da73476441084a2e59e41e03194c5f39c
 
 
     steps:
@@ -55,6 +54,17 @@ jobs:
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
+
+      - run:
+          name: Setup dependencies
+          command: |
+            sudo composer self-update
+            composer install -n --prefer-dist
+      - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
 
       - save_cache:
           paths:
